# blt-mlx

./: MACOS_MPS_SETUP.md  README.md  pyproject.toml  setup.py  sphere_utils.py
apps/main/: lingua_train.py
bytelatent/: base_transformer.py  distributed.py  probe.py  profiling.py  train.py  transformer.py
bytelatent/data/: cross_reference_patcher.py  patcher.py  repetition_detector.py
bytelatent/model/: latent_transformer.py  local_models.py  utils.py
tests/: __init__.py  test_multiscale_patchaware.py  test_optimized_pipeline.py  test_patcher_configs.py  test_patching.py  test_repetition_tuning.py  test_sphere_utils.py
