[project]
name = "blt"
version = "0.1.0"
description = "BLT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "datatrove>=0.5.0",
    "fsspec>=2024.6.1",
    "huggingface-hub==0.30.*",
    "jinja2>=3.1.6",
    "lm-eval>=0.4.8",
    "luigi>=3.6.0",
    "numpy>=2.1.2",
    "omegaconf>=2.3.0",
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "pynvml>=12.0.0",
    "rich>=14.0.0",
    "s3fs>=2024.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "submitit>=1.5.2",
    "tiktoken>=0.8.0",
    "torch",
    "torchaudio",
    "torchvision",
    "typer>=0.15.3",
    "viztracer>=1.0.3",
    "wandb>=0.19.10",
]

[tool.uv.sources]
# xformers is optional - it fails to build on macOS, so only include if needed
# Uncomment the line below if you're on Linux and want to build xformers
# xformers = { git = "https://github.com/facebookresearch/xformers.git", rev = "de742ec3d64bd83b1184cc043e541f15d270c148" }

[dependency-groups]
pre_build = [
    "setuptools",
    "ninja",
]
# xformers is optional - only works on Linux with CUDA
# Install with: uv sync --group compile_xformers
compile_xformers = ['xformers']
dev = [
    "black==24.8.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "pudb>=2025.1",
]


[tool.uv]
# xformers build isolation disabled only if installing xformers group
# no-build-isolation-package = ["xformers"]
index-strategy = "unsafe-best-match"
# Removed torch override - using standard PyPI torch with MPS support

[tool.isort]
profile = "black"
known_bytelatent = "bytelatent"
known_apps = "apps"
known_third_party = "wandb"
sections = "FUTURE,STDLIB,THIRDPARTY,BYTELATENT,APPS,FIRSTPARTY,LOCALFOLDER"
